updates to the random shit in my repo -- David Caratelli

--- a/Playground/GNUmakefile
+++ b/Playground/GNUmakefile
@@ -13,8 +13,10 @@ OBJECTS = $(SOURCES:.cxx=.o)
 # include options for this package
 INCFLAGS = -I.                       #Include itself
 INCFLAGS += $(shell larlite-config --includes)
+INCFLAGS += $(shell recotool-config --includes)
 INCFLAGS += -I$(LARLITE_USERDEVDIR)
 INCFLAGS += -I$(LARLITE_USERDEVDIR)/RecoTool/AnalysisAlg
+INCFLAGS += -I$(LARLITE_USERDEVDIR)/RecoTool/ClusterRecoUtil
 
 # platform-specific options
 OSNAME          = $(shell uname -s)
@@ -31,6 +33,8 @@ CINTFLAGS += "-p"
 
 LDFLAGS += $(shell larlite-config --libs)
 LDFLAGS += -L$(LARLITE_LIBDIR) -lRecoTool_AnalysisAlg
+LDFLAGS += -L$(LARLITE_LIBDIR) -lRecoTool_ClusterRecoUtil
+LDFLAGS += -L$(LARLITE_LIBDIR) -lRecoTool_FANN
 
 # call the common GNUmakefile
 include $(LARLITE_BASEDIR)/Makefile/GNUmakefile.CORE
